--- a/sitelist.html
+++ b/sitelist.html
@@ -68,6 +68,12 @@
         </div>
         <div class="text-box flex-container unselectable">
             <div>
+            <a href=changelog.html>Changelog</a><br>
+            The manually edited changelog for the site. Currently being updated every day I make major changes on the site so that I don't regret not documenting it in the future.
+            </div>
+        </div>
+        <div class="text-box flex-container unselectable">
+            <div>
             <a href=allspaxfaces.html>All Spax Faces</a><br>
             When originally making this site and testing the text box functionality, I went a little too far with a gag and ended up making 14 sprites for my axolotl character. I only ended up using two of them but in this site, you can see all the expressions I made for them! (No but seriously I spent two fucking hours on them aaaa)
             </div>
