--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -25,6 +25,35 @@
     </head>
     <body>
         <div class="text-box flex-container unselectable">
+            <div>
+                    <img src="
+                images/spax/Smirk.png
+                    "></img>
+                Yo. Spax here. The javascript I wrote for this website doesn't work at the moment, so I'll be updating this manually until I fix it.
+            </div>
+        </div>
+        <div class="text-box flex-container unselectable">
+            <div>
+                    <img src="
+                images/spax/Look.png
+                    "></img>
+                Currently supposed to be sleeping right now! I'll be awake at 6:30 am MDT though. 
+            </div>
+        </div>
+        <div class="text-box flex-container unselectable">
+            <div>
+                    <img src="
+                images/spax/Blush.png
+                    "></img>
+                Thanks for visiting my site!
+            </div>
+        </div>
+        <div class="text-box flex-container unselectable">
+            <div>
+                (<a href="index.html">Click here</a> to go back to the main page!)
+            </div>
+        </div>
+        <!--<div class="text-box flex-container unselectable">
             <div style="color:red;">
                 Current status: Broken.<br>
                 -Spax
@@ -46,7 +75,7 @@
         <div class="text-box flex-container unselectable">
             <div id="debug">
             </div>
-        </div>
+        </div>-->
         <!--<div class="text-box flex-container unselectable">
             <div id="debug2">
             </div>
