--- a/changelog.html
+++ b/changelog.html
@@ -42,7 +42,8 @@
             - Made the text and images in the text box unselectable cuz why does it need to be<br>
             - Added two new faces to my character sprites ("Woo!" and "Enraged")<br>
             &nbsp;&nbsp; • (The latter of which looks kinda stupid so I might ask someone to help me fix it)<br>
-            - Fixed the text alignment on all the pages to be accurate (and made this page's text box width larger)
+            - Fixed the text alignment on all the pages to be accurate (and made this page's text box width larger)<br>
+            - Made the school site into what I'll call "Manual Mode" where I'll update it manually until I fix the javascript
             </div>
         </div>
         <div class="text-box long-flex-container unselectable">
