added a new face

--- a/allspaxfaces.html
+++ b/allspaxfaces.html
@@ -98,6 +98,14 @@
         <div class="text-box flex-container unselectable">
             <div>
                 <img src="
+            images/spax/Sleep.png
+                "></img>
+            Sleep
+            </div>
+        </div>
+        <div class="text-box flex-container unselectable">
+            <div>
+                <img src="
             images/spax/Smirk.png
                 "></img>
             Smirk
