--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -35,7 +35,7 @@
         <div class="text-box flex-container unselectable">
             <div>
                     <img src="
-                images/spax/Look.png
+                images/spax/Sleep.png
                     "></img>
                 Currently supposed to be sleeping right now! I'll be awake at 6:30 am MDT though. 
             </div>
