--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -35,9 +35,10 @@
         <div class="text-box flex-container unselectable">
             <div>
                     <img src="
-                images/spax/Sleep.png
+                images/spax/Look.png
                     "></img>
-                Currently supposed to be sleeping right now! I'll be awake at 6:30 am MDT though. 
+                Currently I'm at school, but I'll be at lunch very soon!<br>
+                (Also note that I'm in a very bad-service area of my school.)
             </div>
         </div>
         <div class="text-box flex-container unselectable">
