--- a/changelog.html
+++ b/changelog.html
@@ -23,105 +23,109 @@
 
     </head>
     <body>
-        <div class="text-box long-flex-container unselectable">
-            <div>
-                <span class=large>- Changelog -<br>
-                Manually documenting major changes to the site<br></span>
-                <br>
+        <div id="content">
+            <div class="text-box long-flex-container unselectable">
+                <div>
+                    <span class=large>- Changelog -<br>
+                    Manually documenting major changes to the site<br></span>
+                    <br>
+                </div>
+            </div>
+            <div class="text-box long-flex-container unselectable">
+                <div>
+                <u>Sunday, Feb 13, 2022</u><br>
+                - Took the suicide page redirect off the pages I put it on<br>
+                - Added a custom background<br>
+                &nbsp;&nbsp; • Planning on putting a parallax effect on it in the near future (gonna try do it tomorrow)<br>
+                - For some reason the local font wasn't being loaded in correctly so I fixed that<br>
+                - At the same time I added .woff and .otf to the existing .ttf font format<br>
+                - Started updating this changelog page so I don't regret not doing it in the future<br>
+                - Made the text and images in the text box unselectable cuz why does it need to be<br>
+                - Added three new faces to my character sprites ("Woo!", "Enraged", and "Sleep")<br>
+                &nbsp;&nbsp; • (The latter of which looks kinda stupid so I might ask someone to help me fix it)<br>
+                - Fixed the text alignment on all the pages to be accurate (and made this page's text box width larger)<br>
+                - Made the school site into what I'll call "Manual Mode" where I'll update it manually until I fix the javascript
+                </div>
+            </div>
+            <div class="text-box long-flex-container unselectable">
+                <div>
+                <u>Saturday, Feb 12, 2022</u><br>
+                - Worked on getting a better custom DEP font for the past 3 days and finally got it exported<br>
+                &nbsp;&nbsp; • Went through 6 betas until it comfortably stayed at v1.06<br>
+                &nbsp;&nbsp; • Tweaks just consisted of height changes for a few characters so they could align better<br>
+                &nbsp;&nbsp; • Huge thanks to Caylie for providing resources to help me get this font from idea to reality<br>
+                - Added the custom font to the site, and now it is what's currently being used :)<br>
+                - Planning on simplifying the edges and releasing that as v2.06 in the very near future<br>
+                - On a less bright note, irl controversy made me feel like killing myself so I made a sort of suicide note and made most of the pages redirect to it<br>
+                - Also tweaked the text boxes again
+                </div>
+            </div>
+            <div class="text-box long-flex-container unselectable">
+                <div>
+                <u>Wednesday, Feb 9, 2022</u><br>
+                - Tried making the school js better but ended up breaking it<br>
+                &nbsp;&nbsp; • I also added an "is it broken" status at the top<br>
+                - That's literally it lmao
+                </div>
+            </div>
+            <div class="text-box long-flex-container unselectable">
+                <div>
+                <u>Tuesday, Feb 8, 2022</u><br>
+                - Fixed text box formatting to be working as intended<br>
+                &nbsp;&nbsp; • It now stays as one size even as the window gets rescaled, and fits the screen snugly on mobile<br>
+                - Added a sitelist as a concentrated place to navigate my webpages.<br>
+                - Added a planned changes page to act as a documentation for what I want to do with this site. <br>
+                &nbsp;&nbsp; • It also acted as a place to publicly thank Mathew for his immense help while creating and updating this site<br>
+                - Updated the main page accordingly<br>
+                - Uncancerfied the am I at school js so it was easier to read and modify
+                </div>
+            </div>
+            <div class="text-box long-flex-container unselectable">
+                <div>
+                <u>Monday, Feb 7, 2022</u><br>
+                - Changed text box formatting so it would work better on mobile<br>
+                - Simultaneously broke the working code for desktop viewers<br>
+                - Added page titles to everything because I forgot to add that in the metadata before
+                </div>
+            </div>
+            <div class="text-box long-flex-container unselectable">
+                <div>
+                <u>Sunday, Feb 6, 2022</u><br>
+                - Added a site for displaying all of my character's facial expressions<br>
+                - Tweaked some sprites<br>
+                - Added more dialogue to the rangal shut up page<br>
+                - Got the countdown to work (tysm Mathew)<br>
+                </div>
+            </div>
+            <div class="text-box long-flex-container unselectable">
+                <div>
+                <u>Sunday, Feb 6, 2022</u><br>
+                - Added a site for displaying all of my character's facial expressions<br>
+                - Tweaked some sprites<br>
+                </div>
+            </div>
+            <div class="text-box long-flex-container unselectable">
+                <div>
+                <u>Saturday, Feb 5, 2022</u><br>
+                Added more facial expressions to my character, added page metadata, added a page for saying whether I'm currently in school or not (somehow worked), tweaked text boxes some more, added shut up rangal site, etc. 
+                </div>
+            </div>
+            <div class="text-box long-flex-container unselectable">
+                <div>
+                <u>Thursday, Feb 3, 2022</u><br>
+                Updated the site.<br>
+                Fixed the background not displaying properly, tweaked the text boxes, and tried getting the library to work again.
+                </div>
+            </div>
+            <div class="text-box long-flex-container unselectable">
+                <div>
+                <u>Wednesday, Feb 2, 2022</u><br>
+                Site created. Currently using it to test actual published web development for a big project.<br>
+                Added text boxes, a (bad) custom DEP Font, a test main page, and an external style sheet. Attempted to get a javascript library to work.
+                </div>
             </div>
         </div>
-        <div class="text-box long-flex-container unselectable">
-            <div>
-            <u>Sunday, Feb 13, 2022</u><br>
-            - Took the suicide page redirect off the pages I put it on<br>
-            - Added a custom background<br>
-            &nbsp;&nbsp; • Planning on putting a parallax effect on it in the near future (gonna try do it tomorrow)<br>
-            - For some reason the local font wasn't being loaded in correctly so I fixed that<br>
-            - At the same time I added .woff and .otf to the existing .ttf font format<br>
-            - Started updating this changelog page so I don't regret not doing it in the future<br>
-            - Made the text and images in the text box unselectable cuz why does it need to be<br>
-            - Added three new faces to my character sprites ("Woo!", "Enraged", and "Sleep")<br>
-            &nbsp;&nbsp; • (The latter of which looks kinda stupid so I might ask someone to help me fix it)<br>
-            - Fixed the text alignment on all the pages to be accurate (and made this page's text box width larger)<br>
-            - Made the school site into what I'll call "Manual Mode" where I'll update it manually until I fix the javascript
-            </div>
-        </div>
-        <div class="text-box long-flex-container unselectable">
-            <div>
-            <u>Saturday, Feb 12, 2022</u><br>
-            - Worked on getting a better custom DEP font for the past 3 days and finally got it exported<br>
-            &nbsp;&nbsp; • Went through 6 betas until it comfortably stayed at v1.06<br>
-            &nbsp;&nbsp; • Tweaks just consisted of height changes for a few characters so they could align better<br>
-            &nbsp;&nbsp; • Huge thanks to Caylie for providing resources to help me get this font from idea to reality<br>
-            - Added the custom font to the site, and now it is what's currently being used :)<br>
-            - Planning on simplifying the edges and releasing that as v2.06 in the very near future<br>
-            - On a less bright note, irl controversy made me feel like killing myself so I made a sort of suicide note and made most of the pages redirect to it<br>
-            - Also tweaked the text boxes again
-            </div>
-        </div>
-        <div class="text-box long-flex-container unselectable">
-            <div>
-            <u>Wednesday, Feb 9, 2022</u><br>
-            - Tried making the school js better but ended up breaking it<br>
-            &nbsp;&nbsp; • I also added an "is it broken" status at the top<br>
-            - That's literally it lmao
-            </div>
-        </div>
-        <div class="text-box long-flex-container unselectable">
-            <div>
-            <u>Tuesday, Feb 8, 2022</u><br>
-            - Fixed text box formatting to be working as intended<br>
-            &nbsp;&nbsp; • It now stays as one size even as the window gets rescaled, and fits the screen snugly on mobile<br>
-            - Added a sitelist as a concentrated place to navigate my webpages.<br>
-            - Added a planned changes page to act as a documentation for what I want to do with this site. <br>
-            &nbsp;&nbsp; • It also acted as a place to publicly thank Mathew for his immense help while creating and updating this site<br>
-            - Updated the main page accordingly<br>
-            - Uncancerfied the am I at school js so it was easier to read and modify
-            </div>
-        </div>
-        <div class="text-box long-flex-container unselectable">
-            <div>
-            <u>Monday, Feb 7, 2022</u><br>
-            - Changed text box formatting so it would work better on mobile<br>
-            - Simultaneously broke the working code for desktop viewers<br>
-            - Added page titles to everything because I forgot to add that in the metadata before
-            </div>
-        </div>
-        <div class="text-box long-flex-container unselectable">
-            <div>
-            <u>Sunday, Feb 6, 2022</u><br>
-            - Added a site for displaying all of my character's facial expressions<br>
-            - Tweaked some sprites<br>
-            - Added more dialogue to the rangal shut up page<br>
-            - Got the countdown to work (tysm Mathew)<br>
-            </div>
-        </div>
-        <div class="text-box long-flex-container unselectable">
-            <div>
-            <u>Sunday, Feb 6, 2022</u><br>
-            - Added a site for displaying all of my character's facial expressions<br>
-            - Tweaked some sprites<br>
-            </div>
-        </div>
-        <div class="text-box long-flex-container unselectable">
-            <div>
-            <u>Saturday, Feb 5, 2022</u><br>
-            Added more facial expressions to my character, added page metadata, added a page for saying whether I'm currently in school or not (somehow worked), tweaked text boxes some more, added shut up rangal site, etc. 
-            </div>
-        </div>
-        <div class="text-box long-flex-container unselectable">
-            <div>
-            <u>Thursday, Feb 3, 2022</u><br>
-            Updated the site.<br>
-            Fixed the background not displaying properly, tweaked the text boxes, and tried getting the library to work again.
-            </div>
-        </div>
-        <div class="text-box long-flex-container unselectable">
-            <div>
-            <u>Wednesday, Feb 2, 2022</u><br>
-            Site created. Currently using it to test actual published web development for a big project.<br>
-            Added text boxes, a (bad) custom DEP Font, a test main page, and an external style sheet. Attempted to get a javascript library to work.
-            </div>
-        </div>
+        <div id="bg"></div>
+        <script src="scrollparallax.js"></script>
     </body>
 </html>
