--- a/changelog.html
+++ b/changelog.html
@@ -23,6 +23,7 @@
 
     </head>
     <body>
+        <div id="bg">test</div>
         <div id="content">
             <div class="text-box long-flex-container unselectable">
                 <div>
@@ -125,7 +126,6 @@
                 </div>
             </div>
         </div>
-        <div id="bg"></div>
         <script src="scrollparallax.js"></script>
     </body>
 </html>
