--- a/changelog.html
+++ b/changelog.html
@@ -23,7 +23,7 @@
 
     </head>
     <body>
-        <div id="bg">test</div>
+        <div id="bg">test<br><br><br><br><br><br><br><br><br></div>
         <div id="content">
             <div class="text-box long-flex-container unselectable">
                 <div>
