--- a/changelog.html
+++ b/changelog.html
@@ -22,8 +22,8 @@
         <link rel="stylesheet" href="styles.css" type=text/css>
 
     </head>
-    <body>
-        <div id="bg">test<br><br><br><br><br><br><br><br><br></div>
+    <body id="bg">
+        <!--<div id="bg">test<br><br><br><br><br><br><br><br><br></div>-->
         <div id="content">
             <div class="text-box long-flex-container unselectable">
                 <div>
