--- a/changelog.html
+++ b/changelog.html
@@ -34,6 +34,15 @@
             </div>
             <div class="text-box long-flex-container unselectable">
                 <div>
+                <u>Monday, Feb 14, 2022</u><br>
+                - v2.06 of the DEP font was created (and attempted to share with Temmie on Twitter)<br>
+                &nbsp;&nbsp; • It aligned a few characters that I forgot about before, but more importantly it simplified the edges so that it uses less points and theoretically renders faster<br>
+                - Attempted to add parallax to the background image that now partially works (TYSM MATHEW YA FUCKIN' SAINT)<br>
+                &nbsp;&nbsp; • Will work on completely fixing tomorrow<br>
+                </div>
+            </div>
+            <div class="text-box long-flex-container unselectable">
+                <div>
                 <u>Sunday, Feb 13, 2022</u><br>
                 - Took the suicide page redirect off the pages I put it on<br>
                 - Added a custom background<br>
