--- a/contactme.html
+++ b/contactme.html
@@ -23,7 +23,7 @@
         <link rel="stylesheet" href="styles.css" type=text/css>
 
     </head>
-    <body>
+    <body id="bg">
         <div class="text-box flex-container unselectable">
             <div>
                     <img src="
@@ -32,7 +32,7 @@
                 Yo. Spax here. If I'm in school, use this form to contact me!
             </div>
         </div>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScx4EzQf435cuU7P_Uyz814gXrKKaJktjawXf2EPAvbOS6mRg/viewform?embedded=true" width="640" height="832" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScx4EzQf435cuU7P_Uyz814gXrKKaJktjawXf2EPAvbOS6mRg/viewform?embedded=true" width="640" height="832" frameborder="0" marginheight="0" marginwidth="0" style="margin: 0 auto;">Loading…</iframe>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     </body>
 </html>
